--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@
 .metadata/.plugins/org.eclipse.jdt.core/externalLibsTimeStamps
 .metadata/.plugins/org.eclipse.jdt.core/variablesAndContainers.dat
 .metadata/.plugins/org.eclipse.m2e.core/workspaceState.ser
+.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
