--- a/TerraformingMars/src/main/resources/application.properties
+++ b/TerraformingMars/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/Mars?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=super3
+server.port=9000
 
