--- a/TerraformingMars/src/main/resources/application.properties
+++ b/TerraformingMars/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/Mars?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=super3
+spring.datasource.password=Super3
 server.port=9000
-
